global.css
:root {
    --bg: #000000;
    --text: #e6eef8;
    --header-h: 64px;
}

/* prevent padding/width from causing horizontal overflow */
*, *::before, *::after {
    box-sizing: border-box;
}

html,
body {
    height: 100%;
    margin: 0;
}

body {
    font-family: Inter, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
    background: var(--bg);
    color: var(--text);
    min-height: -webkit-fill-available;
    padding-top: calc(var(--header-h) + env(safe-area-inset-top));
}

main {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin: 0;
    padding: 0 0 100px 0;
}

a {
    color: lightblue;
}

#logo-header {
    display: block;
    height: auto;
    max-width: 2rem;
    width: 2rem;
}

header {
    position: fixed;
    left: 0;
    right: 0;
    top: 0;
    z-index: 10;
    display: flex;
    align-items: center;
    justify-content: space-between;
    align-items: center;
    background: var(--bg);
    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
    display: flex;
    gap: 30px;
    justify-content: space-between;
    padding: 1rem;
    position: fixed;
    right: 0;
    top: 0;
    z-index: 10;
}

.nav-left {
    display: flex;
    align-items: center;
    gap: 20px;
}

.nav-right {
    display: block;
    height: auto;
    max-width: 2rem;
}

.nav-links {
    display: flex !important;
    gap: 12px;
    align-items: center;
}

.nav-links a {
    border-radius: 8px;
    color: var(--muted);
    display: inline-block;
    font-size: 15px;
    padding: 8px 10px;
    text-align: center;
    text-decoration: none;
}

.nav-links a:hover {
    color: var(--text);
    background: rgba(255, 255, 255, 0.1);
}

.nav-links a.active {
    color: var(--accent);
    font-weight: 600;
}

@media (max-width:640px) {
    .nav-links {
        display: none;
    }
    .nav-links a[href="/"] {
        display: none !important;
    }

    main > h1:first-child,
    main section > h1:first-child {
        margin-top: 1rem;
    }
}

.spacer {
    height: calc(56px + env(safe-area-inset-bottom));
}

footer {
    font-size: 13px;
    position: fixed;
    bottom: 0;
    left: 0;
    width: 100%;
    right: 0;
    background: var(--bg);
    border-top: 1px solid rgba(255, 255, 255, 0.3);
    margin: 0 auto;
    max-width: 100%;
    padding: 1rem;
}

.foot {
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
    gap: 14px;
}

